--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .right-side {
     flex: 2; 
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 #the-form {
@@ -73,7 +73,8 @@ a {
 
 input {
     height: 30px;
+    width: 200px;
     font-size: 16px;
     border-radius: 4px;
-    border-color: #E5E7EB;
+    border: 1px solid #E5E7EB;
 }
