--- a/style.css
+++ b/style.css
@@ -78,3 +78,20 @@ input {
     border-radius: 4px;
     border: 1px solid #E5E7EB;
 }
+
+#logo-div {
+    background-color:#00000090;
+    color: white;
+    margin-top: 100px;
+    display: flex;
+    font-size: 60px;
+    justify-content: center;
+    height: 120px;
+    align-items: center;
+}
+
+#logo-div div {
+  font-weight: 800;
+  height: 70px;
+  font-family: 'Syne Mono', monospace;
+}
